# mdfreader

./: .gitignore  ISSUE_TEMPLATE.md  LICENSE  MANIFEST.in  ProjectHome.md  README  README.md  Ui_mdfreaderui.py  dataRead.c  dataRead.pyx  mdf3.py  mdf3reader.py  mdf4reader.py  mdfForVeuszPlugin.py  mdfconverter.py  mdfinfo3.py  mdfinfo4.py  mdfreader.e4p  mdfreader.py  mdfreaderui.py  mdfreaderui.ui  pyproject.toml  setup.cfg  setup.py
.github/workflows/: ci.yml  release-linux.yml  release-macos.yml  release-windows.yml
.issues/: .properties
docs/: Makefile  conf.py  index.rst  performance.rst
docs/channel/: index.rst
docs/mdf/: index.rst
docs/mdf3reader/: index.rst
docs/mdf4reader/: index.rst
docs/mdfinfo3/: index.rst
docs/mdfinfo4/: index.rst
docs/mdfreader/: index.rst
files/: ReadMe
mdfconverter/: Ui_mdfreaderui4.py  Ui_mdfreaderui5.py  __init__.py  mdfconverter.py  mdfreaderui.py  mdfreaderui.ui  mdfreaderui4.py  mdfreaderui5.py
mdfreader/: __init__.py  __main__.py  channel.py  dataRead.pyx  mdf.py  mdf3reader.py  mdf4reader.py  mdfForVeuszPlugin.py  mdfinfo3.py  mdfinfo4.py  mdfreader.py
mdfreader/tests/: test_mdfreader.py
source/: conf.py
source/mdfinfo4/: index.rst
trunk/: .project  .pydevproject  LICENSE  Makefile  README  Ui_mdfreaderui.py  mdf3.py  mdf3reader.py  mdf4.py  mdf4reader.py  mdfForVeuszPlugin.py  mdfinfo3.py  mdfinfo4.py  mdfreader.e4p  mdfreader.py  mdfreaderui.py  mdfreaderui.ui  setup.py
trunk/source/: conf.py
trunk/trunk/: mdfreader.py
