[metadata]
license_files =

[build_ext]
inplace=1

[options]
setup_requires = cython

[tool:pytest]
testpaths = mdfreader/tests
python_files = test_*.py
markers =
    slow: marks tests as slow (deselect with -m "not slow")
    compare_mdfr: cross-validates mdfreader vs mdfr Rust library (run with -m compare_mdfr)
tmp_path_retention_count = 1
tmp_path_retention_policy = failed
tmp_path_base_dir = /home/ratal/workspace/mdfreader/.pytest_tmp
